update to personal profile info card spacing under image when there is a smaller amount of info in card

--- a/src/components/personal-profile-info-card/_personal-profile-info-card.scss
+++ b/src/components/personal-profile-info-card/_personal-profile-info-card.scss
@@ -28,6 +28,10 @@
   @include media-breakpoint-up(md) {
     flex: 0 0 auto;
     width: rem(304);
+    margin-bottom: rem(34);
+  }
+  @include media-breakpoint-up(xl) {
+    margin-bottom: 0;
   }
 
   &:before {
