https://bugify.idfive.com/issues/27888

--- a/src/components/site-header/_site-header.scss
+++ b/src/components/site-header/_site-header.scss
@@ -1589,6 +1589,7 @@ a.site-header__mega-menu-main-nav-dropdown-parent {
   }
   &:hover {
     background-color: $iastate-maroon;
+    color: $white;
   }
   span {
     position: relative;
