Bugify ticket: Update FE Library Markup + Wordpress Markup Fields for WYSIWYG https://bugify.idfive.com/issues/27931

--- a/src/components/accordion/accordion.twig
+++ b/src/components/accordion/accordion.twig
@@ -9,7 +9,7 @@
       </button>
     </h2>
     <div id="flush-collapse{{id}}-{{ counter }}" class="accordion-collapse collapse" aria-labelledby="flush-heading{{id}}-{{ counter }}" data-bs-parent="#accordionFlush{{id}}">
-      <div class="accordion-body">{{ section.content|raw }}</div>
+      <div class="accordion-body text-content">{{ section.content|raw }}</div>
     </div>
   </div>
   {% endfor %}
