--- a/src/components/card/card--profile-with-modal.twig
+++ b/src/components/card/card--profile-with-modal.twig
@@ -22,7 +22,7 @@
           </div>
           <div class="iastate22-modal__content">
             <h2 class="iastate22-modal__title" id="{{ modal.id }}-title">{{ title }}</h2>
-            <div class="iastate22-modal__body-content">{{ modal.content|raw }}</div>
+            <div class="iastate22-modal__body-content text-content">{{ modal.content|raw }}</div>
             <div class="iastate22-modal__content-cta">
               <p>{{ modal.call_to_action_intro }}</p>
               <a href="{{ modal.call_to_action.url }}">{{ modal.call_to_action.title }}</a>
