--- a/src/components/card/card.twig
+++ b/src/components/card/card.twig
@@ -6,7 +6,7 @@
   {% endif %}
 	<div class="iastate22-card__content">
 		<h2 class="iastate22-card__title"><a href="{{url}}">{{ title }}</a></h2>
-		<div class="iastate22-card__body">
+		<div class="iastate22-card__body text-content">
 			{{ body|raw }}
 		</div>
 		{% if cta.url %}
