--- a/src/components/external-news-story/external-news-story.twig
+++ b/src/components/external-news-story/external-news-story.twig
@@ -6,7 +6,7 @@
     <div class="external-news-story__media">
       <img src="{{ image|path }}" alt="" loading="lazy" width="608" height="404" >
     </div>
-    <div class="external-news-story__content">
+    <div class="external-news-story__content text-content">
       <h3>{{headline}}</h3>
       <p>{{body_copy}}</p>
       {% include "@link-set" with link_set %}
