--- a/src/components/full-width-image/full-width-image.twig
+++ b/src/components/full-width-image/full-width-image.twig
@@ -2,5 +2,5 @@
     <div class="full-width-image__image">
       <img src="{{ image|path }}" alt="" loading="lazy" width="1470" height="549">
     </div>
-    <figcaption class="full-width-image__caption">{{ caption }}</figcaption>
+    <figcaption class="full-width-image__caption text-content">{{ caption|raw }}</figcaption>
 </figure>
