--- a/src/components/multi-column-content/multi-column-content--alternative.twig
+++ b/src/components/multi-column-content/multi-column-content--alternative.twig
@@ -8,7 +8,7 @@
     {% endif %}
     <div class="multi-column-content__column--content">
       <h3 class="multi-column-content__column--title">{{ column.title }}</h3>
-      <div class="multi-column-content__column--description">{{ column.description|raw }}</div>
+      <div class="multi-column-content__column--description text-content">{{ column.description|raw }}</div>
       <a class="link-tertiary" href="{{ column.link.url }}">{{ column.link.title }}<span class="arrow"></span></a>
     </div>
   </div>
