--- a/src/components/card-set/_card-set.scss
+++ b/src/components/card-set/_card-set.scss
@@ -93,7 +93,7 @@
       pointer-events: none;
     }
   }
-  ul {
+  > ul {
     display: flex;
     flex-wrap: wrap;
     @include media-breakpoint-up(md) {
@@ -114,7 +114,7 @@
         display: none;
       }
     }
-    li {
+    > li {
       max-width: rem(400);
       margin: 0 auto rem(30);
       flex: 0 1 auto;
@@ -128,12 +128,6 @@
         width: 33.3%;
         padding-right: rem(40);
       }
-      // &:last-child {
-      //   @include media-breakpoint-up(md) {
-      //     margin-right: auto;
-      //     margin-left: 0;
-      //   }
-      // }
     }
   }
 }
