--- a/src/components/feature-with-small-image/feature-with-small-image.twig
+++ b/src/components/feature-with-small-image/feature-with-small-image.twig
@@ -4,7 +4,7 @@
   </div>
   <div class="callout-with-image__content text-content">
     <h2>{{title}}</h2>
-    <p>{{body_copy}}</p>
+    <div>{{body_copy}}</div>
     {% include "@button" with button %}
     {% if link_set %}
       {% include "@link-set" with link_set %}
