Pagination update - https://bugify.idfive.com/issues/27904

--- a/src/components/pagination/pagination.twig
+++ b/src/components/pagination/pagination.twig
@@ -3,24 +3,24 @@
     class="pagination">
 
     {# First #}
-      <li class="first btn">
+      <li class="first">
         <a href="#">
           <span class="visible-for-screen-readers">First</span>
         </a>
       </li>
-      {# <li class="first btn disabled">
+      {# <li class="first disabled">
         <button disabled>
           <span class="visible-for-screen-readers">First</span>
         </button>
       </li> #}
 
     {# Previous #}
-      <li class="prev btn">
+      <li class="prev">
         <a href="#">
           <span class="visible-for-screen-readers">Previous</span>
         </a>
       </li>
-      {# <li class="prev btn disabled">
+      {# <li class="prev disabled">
         <button disabled>
           <span class="visible-for-screen-readers">Previous</span>
         </button>
@@ -38,24 +38,24 @@
         </li>
 
     {# Next #}
-      <li class="next btn">
+      <li class="next">
         <a href="#">
           <span class="visible-for-screen-readers">Next</span>
         </a>
       </li>
-      {# <li class="next btn disabled">
+      {# <li class="next disabled">
         <button disabled>
           <span class="visible-for-screen-readers">Next</span>
         </button>
       </li> #}
 
     {# Last #}
-      <li class="last btn">
+      <li class="last">
         <a href="#">
           <span class="visible-for-screen-readers">Last</span>
         </a>
       </li>
-      {# <li class="last btn disabled">
+      {# <li class="last disabled">
         <button disabled>Last</button>
       </li> #}
 
