Updating feature component body copy to be optional - https://trello.com/c/YBC4GgAz/85-optional-body-copy-format

--- a/src/components/feature/feature.twig
+++ b/src/components/feature/feature.twig
@@ -6,7 +6,7 @@
   {% endif %}
   <div class="iastate22-callout__content text-content">
     <h3>{{title}}</h3>
-    <div>{{body_copy|raw}}</div>
+    {% if body_copy %}<div>{{body_copy|raw}}</div>{% endif %}
     {% include "@link-set" with link_set %}
   </div>
 </div>
