--- a/src/components/site-footer/site-footer--ecosystem.twig
+++ b/src/components/site-footer/site-footer--ecosystem.twig
@@ -1,7 +1,9 @@
 <footer class="site-footer site-footer--ecosystem">
   <div class="site-footer__flex-wrap">
     <div class="site-footer__logo-social-links-wrap">
-      <img class="site-footer__logo" src="{{ "https://cdn.theme.iastate.edu/img/iastate22/iowa-state-university-logo-with-tagline-sci-tech.svg"|path }}" alt="Iowa State University of Science and Technology" loading="lazy" width="516" height="69">
+      <a href="https://www.iastate.edu" class="site-footer__logo">
+        <img src="{{ "https://cdn.theme.iastate.edu/img/iastate22/iowa-state-university-logo-with-tagline-sci-tech.svg"|path }}" alt="Iowa State University of Science and Technology" loading="lazy" width="516" height="69">
+      </a>
       
       {% if social_links %}
       <ul class="site-footer__social">
