--- a/src/components/site-footer/site-footer.twig
+++ b/src/components/site-footer/site-footer.twig
@@ -1,6 +1,8 @@
 <footer class="site-footer">
   <div class="site-footer__flex-wrap">
-    <img class="site-footer__logo" src="{{ "https://cdn.theme.iastate.edu/img/iastate22/iowa-state-university-logo-with-tagline-sci-tech.svg"|path }}" alt="Iowa State University of Science and Technology" loading="lazy" width="516" height="69">
+    <a href="https://www.iastate.edu" class="site-footer__logo">
+      <img src="{{ "https://cdn.theme.iastate.edu/img/iastate22/iowa-state-university-logo-with-tagline-sci-tech.svg"|path }}" alt="Iowa State University of Science and Technology" loading="lazy" width="516" height="69">
+    </a>
 
     <div class="site-footer__social-links-wrap">
       <ul class="site-footer__social">
