correcting site-header issue on mobile where top logo was off during scroll when no parent unit name was present

--- a/src/components/site-header/_site-header.scss
+++ b/src/components/site-header/_site-header.scss
@@ -93,7 +93,9 @@
   &.site-header__logo-no-parent-unit {
     transition: 0.2s top ease-in-out, 0.2s filter ease-in-out, 0.2s transform ease-in-out;
     .site-header--ecosystem.headroom--unpinned & {
-      transform: translateY(-100%);
+      @include media-breakpoint-up(xl) {
+        transform: translateY(-100%);
+      }
     }
   }
 }
