--- a/src/components/site-footer/_site-footer.scss
+++ b/src/components/site-footer/_site-footer.scss
@@ -38,6 +38,7 @@
   width: 100%;
   max-width: rem(516);
   height: 100%;
+  display: block;
   @include media-breakpoint-up(xl) {
     flex: 0 1 auto;
     width: 35%;
