--- a/src/components/statistic/statistic--right.twig
+++ b/src/components/statistic/statistic--right.twig
@@ -1,4 +1,4 @@
-<div class="statistic-with-text statistic-with-text--right">
+<div class="statistic-with-text statistic-with-text--right{% if not text %} statistic-with-text--full-width{% endif %}">
   {% include "@stat" with statistic %}
-  <div class="statistic-with-text__text text-content">{{text|raw}}</div>
+  {% if text %}<div class="statistic-with-text__text text-content">{{text|raw}}</div>{% endif %}
 </div>
