--- a/src/components/site-footer/_site-footer.scss
+++ b/src/components/site-footer/_site-footer.scss
@@ -362,6 +362,7 @@
       margin-bottom: rem(35);
       font-size: rem(18);
       line-height: (26 / 18);
+      color: $white;
       @include media-breakpoint-up(md) {
         flex: 1 1 0;
         text-align: left;
