--- a/src/components/site-footer/_site-footer.scss
+++ b/src/components/site-footer/_site-footer.scss
@@ -139,6 +139,7 @@
       @include media-breakpoint-up(md) {
         flex-wrap: wrap;
         justify-content: flex-start;
+        border-bottom: none;
       }
       @include media-breakpoint-up(xl) {
         justify-content: flex-end;
@@ -161,6 +162,7 @@
       .site-footer--ecosystem & {
         @include media-breakpoint-up(md) {
           padding: 0 rem(30) 0 0;
+          border-bottom: rem(2) solid $iastate-gold;
         }
       }
       &:first-child {
@@ -238,10 +240,12 @@
   border-bottom: rem(2) solid $iastate-gold;
   padding-bottom: rem(27);
   margin-bottom: rem(30);
+
   @include media-breakpoint-up(xl) {
     border-bottom: none;
     min-height: rem(130);
     min-width: rem(400);
+    margin-bottom: 0;
   }
   .site-footer--ecosystem & {
     @include media-breakpoint-up(xl) {
@@ -249,7 +253,8 @@
       display: flex;
       flex-wrap: wrap;
       align-items: flex-end;
-      padding-bottom: rem(7);
+      padding-bottom: 0;
+      padding-right: rem(60);
     }
     .site-footer__section-label {
       @include media-breakpoint-up(xl) {
@@ -418,12 +423,14 @@
   @include media-breakpoint-up(md) {
     margin-left: rem(-68);
     margin-right: rem(-68);
+    margin-top: rem(30);
     padding-left: rem(68);
     padding-right: rem(68);
   }
   @include media-breakpoint-up(xl) {
     margin-left: rem(-82);
     margin-right: rem(-82);
+    margin-top: rem(50);
     display: flex;
     align-items: center;
     flex-direction: row-reverse;
@@ -471,11 +478,14 @@
     }
     li {
       text-align: center;
+      line-height: (21 / 15);
       @include media-breakpoint-up(md) {
         text-align: left;
       }
       @include media-breakpoint-up(xl) {
         margin-right: rem(15);
+      }
+      @include media-breakpoint-up(xxl) {
         text-align: center;
       }
       a {
@@ -484,7 +494,7 @@
         font-family: $typeface-sans-serif;
         font-weight: 700;
         font-size: rem(15);
-        line-height: (26 / 15);
+
         &:hover {
           color: $iastate-gold;
         }
@@ -505,7 +515,8 @@
   @include media-breakpoint-up(xl) {
     font-size: rem(18);
     line-height: (28 / 18);
-    text-align: center;
+    padding-right: rem(40);
+    // text-align: center;
   }
 }
 
@@ -528,10 +539,8 @@
     text-align: left;
   }
   @include media-breakpoint-up(xl) {
-    flex: 1 1 0;
-  }
-  @include media-breakpoint-up(xxl) {
-    margin-right: rem(144);
+    flex: 0 1 auto;
+    width: 50%;
   }
 
   .site-footer__section-label {
@@ -560,6 +569,13 @@
 }
 
 .site-footer__site-org-contact-address,
+.site-footer__site-org-contact-email-phone-wrap {
+  @include media-breakpoint-up(lg) {
+    flex: 0 1 auto;
+    width: 50%;
+  }
+}
+.site-footer__site-org-contact-address,
 .site-footer__site-org-contact-email,
 .site-footer__site-org-contact-phone {
   margin-bottom: rem(20);
@@ -578,8 +594,28 @@
 .site-footer--ecosystem {
   .site-footer__logo-social-links-wrap + .site-footer__secondary-nav,
   .site-footer__logo-social-links-wrap + .site-footer__secondary-nav + .site-footer__site-org-contact-info {
+    @include media-breakpoint-up(md) {
+      margin-top: rem(40);
+    }
     @include media-breakpoint-up(xl) {
       margin-top: rem(60);
+    }
+  }
+
+  // instances where there is no site-footer__secondary-nav
+  .site-footer__primary-nav + .site-footer__site-org-contact-info {
+    @include media-breakpoint-up(xl) {
+      position: relative;
+      left: 50%;
+    }
+  }
+
+  // instances where there is not site-footer__site-org-contact-info
+  .site-footer__logo-social-links-wrap + .site-footer__site-org-contact-info {
+    @include media-breakpoint-up(xl) {
+      position: relative;
+      left: 50%;
+      margin-top: rem(30);
     }
   }
 }
