--- a/src/components/site-footer/site-footer--ecosystem.twig
+++ b/src/components/site-footer/site-footer--ecosystem.twig
@@ -80,65 +80,66 @@
         <ul {% if footer_secondary_nav|length < 3 %} class="site-footer__secondary-nav-short" {% endif %}>
           {% for link in footer_secondary_nav %}
             <li>
-              <a href="{{ link.url }}">{{ link.title }}</a>
+              <a href="{{ link.url }}">{{link.title}}</a>
             </li>
           {% endfor %}
         </ul>
+      </nav>
+    {% endif %}
+
+    {% if site_org_contact.name or site_org_contact.address.building or site_org_contact.address.street or site_org_contact.address.city_state_zip or site_org_contact.phone or site_org_contact.email %}
+      <div class="site-footer__site-org-contact-info">
+        <h2 class="site-footer__section-label">{{ site_org_contact.name }}</h2>
+        {% if site_org_contact.address.building or site_org_contact.address.street or site_org_contact.address.city_state_zip %}
+          <div class="site-footer__site-org-contact-address">
+            <p>
+              {% if site_org_contact.address.building %}
+                {{ site_org_contact.address.building }}<br>
+              {% endif %}
+              {{ site_org_contact.address.street }}<br>
+              {{ site_org_contact.address.city_state_zip }}</p>
+          </div>
+        {% endif %}
+        <div class="site-footer__site-org-contact-email-phone-wrap">
+          {% if site_org_contact.phone %}
+            <div class="site-footer__site-org-contact-phone">
+              {% for phone in site_org_contact.phone %}
+                <p>
+                  {% if phone.label %}
+                    {{ phone.label|raw }}:
+                  {% endif %}
+                  {{ phone.phone_number }}</p>
+              {% endfor %}
+            </div>
+          {% endif %}
+          {% if site_org_contact.email %}
+            <div class="site-footer__site-org-contact-email">
+              {% for email in site_org_contact.email %}
+                <p>
+                  {% if email.label %}
+                    {{ email.label }}:
+                  {% endif %}
+                  <a href="mailto:{{ email.email_address }}">{{ email.email_address }}</a>
+                </p>
+              {% endfor %}
+            </div>
+          {% endif %}
+        </div>
+      </div>
+    {% endif %}
+  </div>
+  <div class="site-footer__bottom-wrap">
+    <nav class="site-footer__utility-nav" aria-label="Footer Utility">
+      <ul>
+        {% for link in footer_utility_nav %}
+          <li>
+            <a href="{{ link.url }}">{{ link.title }}</a>
+          </li>
+        {% endfor %}
       </ul>
     </nav>
-  {% endif %}
-  {% if site_org_contact.name or site_org_contact.address.building or site_org_contact.address.street or site_org_contact.address.city_state_zip or site_org_contact.phone or site_org_contact.email %}
-    <div class="site-footer__site-org-contact-info">
-      <h2 class="site-footer__section-label">{{ site_org_contact.name }}</h2>
-      {% if site_org_contact.address %}
-        <div class="site-footer__site-org-contact-address">
-          <p>
-            {% if site_org_contact.address.building %}
-              {{ site_org_contact.address.building }}<br>
-            {% endif %}
-            {{ site_org_contact.address.street }}<br>
-            {{ site_org_contact.address.city_state_zip }}</p>
-        </div>
-      {% endif %}
-      <div class="site-footer__site-org-contact-email-phone-wrap">
-        {% if site_org_contact.phone %}
-          <div class="site-footer__site-org-contact-phone">
-            {% for phone in site_org_contact.phone %}
-              <p>
-                {% if phone.label %}
-                  {{ phone.label }}:
-                {% endif %}
-                {{ phone.phone_number }}</p>
-            {% endfor %}
-          </div>
-        {% endif %}
-        {% if site_org_contact.email %}
-          <div class="site-footer__site-org-contact-email">
-            {% for email in site_org_contact.email %}
-              <p>
-                {% if email.label %}
-                  {{ email.label }}:
-                {% endif %}
-                <a href="mailto:{{ email.email_address }}">{{ email.email_address }}</a>
-              </p>
-            {% endfor %}
-          </div>
-        {% endif %}
-      </div>
+    <div class="site-footer__copyright">
+      <p>&copy;{{copyright}}</p>
     </div>
-  {% endif %}
-</div>
-<div class="site-footer__bottom-wrap">
-  <nav class="site-footer__utility-nav" aria-label="Footer Utility">
-    <ul>
-      {% for link in footer_utility_nav %}
-        <li>
-          <a href="{{ link.url }}">{{ link.title }}</a>
-        </li>
-      {% endfor %}
-    </ul>
-  </nav>
-  <div class="site-footer__copyright">
-    <p>&copy;{{copyright}}</p>
   </div>
-</div></footer>
+</footer>
