Update to site-footer--ecosystem to bring "quick links" label up to align with right side info section of footer

--- a/src/components/site-footer/_site-footer.scss
+++ b/src/components/site-footer/_site-footer.scss
@@ -252,9 +252,10 @@
       flex: 1 1 0;
       display: flex;
       flex-wrap: wrap;
-      align-items: flex-end;
+      align-items: flex-start;
       padding-bottom: 0;
       padding-right: rem(60);
+      min-height: initial;
     }
     .site-footer__section-label {
       @include media-breakpoint-up(xl) {
