--- a/src/components/ecosystem-home-hero/_ecosystem-home-hero.scss
+++ b/src/components/ecosystem-home-hero/_ecosystem-home-hero.scss
@@ -187,6 +187,14 @@
       padding-top: 47.08%;
     }
   }
+
+  .ecosystem-home-hero__video {
+    transition: 0.3s opacity ease-in-out;
+    opacity: 0;
+    iframe {
+      opacity: 1;
+    }
+  }
 }
 
 .ecosystem-home-hero__content {
