Ecosystem Home Hero components - Correcting issues with play/pause buttons on vimeo video, missing youtube play/pause button and creating a cdn/local version (https://trello.com/c/voCuBUV1/16-ecosystem-home-hero-background-video-vimeo-play-pause-button-reversed)

--- a/src/components/ecosystem-home-hero/_ecosystem-home-hero.scss
+++ b/src/components/ecosystem-home-hero/_ecosystem-home-hero.scss
@@ -6,6 +6,7 @@
   }
   @include media-breakpoint-up(xl) {
     margin: 0 rem(-298) rem(70) rem(-190);
+    margin: 0;
   }
   &.ecosystem-home-hero--no-image {
     background-color: $iastate-red;
