--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -43,6 +43,7 @@
 @import "../components/video-embed/video-embed";
 @import "../components/table/table";
 @import "../components/form/form";
+@import "../components/filter-form/filter-form";
 @import "../components/subnav/subnav";
 @import "../components/full-width-image/full-width-image";
 @import "../components/call-to-action/call-to-action";
