--- a/src/components/form/_form.scss
+++ b/src/components/form/_form.scss
@@ -49,7 +49,7 @@
     appearance: none;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='12.273' height='7.551'%3E%3Cpath d='m11.566.707-5.429 5.43L.707.707' fill='none' stroke='%234a4a4a' stroke-width='2'/%3E%3C/svg%3E");
     background-repeat: no-repeat no-repeat;
-    background-position: 95% 50%;
+    background-position: center right rem(20);
     background-size: rem(14);
     cursor: pointer;
     padding-left: rem(15);
@@ -120,5 +120,22 @@
   }
   button[type="submit"] {
     @extend %iastate22-button;
+  }
+
+  // inline form
+  &.iastate22-form--inline {
+    @include media-breakpoint-up(sm) {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      align-items: flex-end;
+      gap: rem(30);
+    }
+    .form-item,
+    button[type="submit"] {
+      @include media-breakpoint-up(sm) {
+        margin-block: 0;
+      }
+    }
   }
 }
