--- a/src/components/form/form.twig
+++ b/src/components/form/form.twig
@@ -1,5 +1,4 @@
 <form class="iastate22-form" id="myForm" action="#" method="post">
-
   <div class="form-item">
     <label for="name">Text Input</label>
     <input type="text" name="name" id="name" value="" tabindex="1">
@@ -11,7 +10,9 @@
   </div>
 
   <div class="form-item">
-    <label for="name">Text Input <span class="optional">(optional)</span></label>
+    <label for="name">Text Input
+      <span class="optional">(optional)</span>
+    </label>
     <input type="text" name="name" id="name" value="" tabindex="1">
   </div>
 
@@ -29,7 +30,7 @@
     </select>
   </div>
 
-  
+
   <div class="form-item">
     <p class="label">Checkbox Label Lorem Ipsum</p>
     <input type="checkbox" id="checkbox1" name="checkbox">
@@ -67,7 +68,72 @@
   </div>
 
   <div class="form-item">
-    <button type="submit">Submit<span class="arrow"></span></button>
+    <button type="submit">Submit<span class="arrow"></span>
+    </button>
   </div>
 
+</form>
+
+<h2>Inline Form</h2>
+<form class="iastate22-form iastate22-form--inline" id="InlineForm" action="#" method="post">
+  <div class="form-item">
+    <label for="name">Text Input</label>
+    <input type="text" name="name" id="name" value="" tabindex="1">
+  </div>
+  <div class="form-item">
+    <label for="name">Text Input</label>
+    <input type="text" name="name" id="name" value="" tabindex="1">
+  </div>
+  <div class="form-item">
+    <label for="name">Text Input</label>
+    <input type="text" name="name" id="name" value="" tabindex="1">
+  </div>
+  <div class="form-item">
+    <label for="name">Text Input</label>
+    <input type="text" name="name" id="name" value="" tabindex="1">
+  </div>
+  <div class="form-item">
+    <label for="select-choice">Select Dropdown Choice</label>
+    <select name="select-choice" id="select-choice">
+      <option value="Choice 1">Choice 1</option>
+      <option value="Choice 2">Choice 2</option>
+      <option value="Choice 3">Choice 3</option>
+    </select>
+  </div>
+  <div class="form-item">
+    <label for="select-choice">Select Dropdown Choice</label>
+    <select name="select-choice" id="select-choice">
+      <option value="Choice 1">Choice 1</option>
+      <option value="Choice 2">Choice 2</option>
+      <option value="Choice 3">Choice 3</option>
+    </select>
+  </div>
+  <div class="form-item">
+    <label for="select-choice">Select Dropdown Choice</label>
+    <select name="select-choice" id="select-choice">
+      <option value="Choice 1">Choice 1</option>
+      <option value="Choice 2">Choice 2</option>
+      <option value="Choice 3">Choice 3</option>
+    </select>
+  </div>
+  <div class="form-item">
+    <label for="select-choice">Select Dropdown Choice</label>
+    <select name="select-choice" id="select-choice">
+      <option value="Choice 1">Choice 1</option>
+      <option value="Choice 2">Choice 2</option>
+      <option value="Choice 3">Choice 3</option>
+    </select>
+  </div>
+  <div class="form-item">
+    <label for="select-choice">Select Dropdown Choice</label>
+    <select name="select-choice" id="select-choice">
+      <option value="Choice 1">Choice 1</option>
+      <option value="Choice 2">Choice 2</option>
+      <option value="Choice 3">Choice 3</option>
+    </select>
+  </div>
+  <div class="form-item">
+    <button type="submit">Submit<span class="arrow"></span>
+    </button>
+  </div>
 </form>
