--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -42,6 +42,7 @@
 @import "../components/external-news-story/external-news-story";
 @import "../components/video-embed/video-embed";
 @import "../components/table/table";
+@import "../components/sortable-table/sortable-table";
 @import "../components/form/form";
 @import "../components/filter-form/filter-form";
 @import "../components/subnav/subnav";
@@ -64,9 +65,14 @@
 @import "../components/ecosystem-home-hero/ecosystem-home-hero";
 @import "../components/personal-profile-info-card/personal-profile-info-card";
 @import "../components/privacy-consent/privacy-consent";
+@import "../components/faculty-staff-card/faculty-staff-card";
+@import "../components/faculty-staff-card-set/faculty-staff-card-set";
+@import "../components/faculty-staff-feed-item/faculty-staff-feed-item";
+@import "../components/faculty-staff-feed-item-set/faculty-staff-feed-item-set";
 
 // Pages
 @import "../components/pages/home";
 @import "../components/pages/admission-and-aid";
 @import "../components/pages/additional-pages";
 @import "../components/pages/college-template";
+@import "../components/pages/faculty-staff-directory";
