--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -76,3 +76,5 @@
 @import "../components/pages/additional-pages";
 @import "../components/pages/college-template";
 @import "../components/pages/faculty-staff-directory";
+
+// Test
